--- a/03_add_logging_and_metrics_to_guestbook/beats (copia)/filebeat-kubernetes_ok.yaml
+++ b/03_add_logging_and_metrics_to_guestbook/beats (copia)/filebeat-kubernetes_ok.yaml
@@ -28,7 +28,7 @@ data:
       providers:
         - type: kubernetes
           templates:
-            - condition.contains:
+            - condition.equals:
                 kubernetes.labels.app: redis
               config:
                 - module: redis
@@ -40,6 +40,34 @@ data:
                   slowlog:
                     enabled: true
                     var.hosts: ["${data.host}:${data.port}"]
+            - condition.contains:
+                kubernetes.labels.tier: frontend
+              config:
+                - module: apache2
+                  access:
+                    input:
+                      type: docker
+                      containers.ids:
+                        - ${data.kubernetes.container.id}
+                  error:
+                    input:
+                      type: docker
+                      containers.ids:
+                        - ${data.kubernetes.container.id}
+            - condition.equals:
+                kubernetes.labels.app: mysql
+              config:
+                - module: mysql
+                  error:
+                    input:
+                      type: docker
+                      containers.ids:
+                        - ${data.kubernetes.container.id}
+                  slowlog:
+                    input:
+                      type: docker
+                      containers.ids:
+                        - ${data.kubernetes.container.id}
 
     processors:
       - drop_event:
