--- a/05_mysql_and_phpmyadmin/mysql/mysql-deployment.yaml
+++ b/05_mysql_and_phpmyadmin/mysql/mysql-deployment.yaml
@@ -4,7 +4,9 @@ metadata:
   name: mysql
 spec:
   ports:
-  - port: 3306
+  - protocol: TCP
+    port: 3306
+    targetPort: 3306
   selector:
     app: mysql
   clusterIP: None
@@ -25,7 +27,7 @@ spec:
         app: mysql
     spec:
       containers:
-      - image: mysql:5.6
+      - image: mysql:5.7
         name: mysql
         env:
           # Use secret in real usage
