--- a/05_mysql_and_phpmyadmin/phpmyadmin/phpmyadmin-deployment.yaml
+++ b/05_mysql_and_phpmyadmin/phpmyadmin/phpmyadmin-deployment.yaml
@@ -21,7 +21,7 @@ spec:
             - containerPort: 80
           env:
             - name: PMA_HOST
-              value: mysql
+              value: mysql # nome del servizio mysql
             - name: PMA_PORT
               value: "3306"
             - name: MYSQL_ROOT_PASSWORD
