--- a/06_mysql_and_phpmyadmin_with_kustomization_file/mysql-deployment.yaml
+++ b/06_mysql_and_phpmyadmin_with_kustomization_file/mysql-deployment.yaml
@@ -18,8 +18,8 @@ spec:
         name: mysql
         env:
           # Use secret in real usage
-        - name: project-secrets
-          value: root-password
+        - name: MYSQL_ROOT_PASSWORD
+          value: password
         ports:
         - containerPort: 3306
           name: mysql
