--- a/07_wordpress/wordpress-deployment.yaml
+++ b/07_wordpress/wordpress-deployment.yaml
@@ -37,4 +37,4 @@ spec:
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: wordpress-pv-claim
