--- a/07_wordpress/wordpress-pv.yaml
+++ b/07_wordpress/wordpress-pv.yaml
@@ -1,10 +1,24 @@
 apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: wordpress-pv-volume
+  labels:
+    type: local
+spec:
+  storageClassName: manual
+  capacity:
+    storage: 1Gi
+  accessModes:
+    - ReadWriteOnce
+  hostPath:
+    path: "/var/www/html"
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
+  name: wordpress-pv-claim
 spec:
+  storageClassName: manual
   accessModes:
     - ReadWriteOnce
   resources:
